# abstract2gene

./: .env  .gitignore  .pyproject.toml.template  CHANGELOG.md  Dockerfile  Makefile  README.md  devShell.sh  docker-compose.yml  flake.nix  pyproject.toml  templates.R
.github/workflows/: build.yaml  release.yaml
abstract2gene/: __init__.py  dataset.py  genes.py  model.py  nlp.py  processing.py  storage.py  typing.py
abstract2gene/data/: __init__.py  _downloader.py  _utils.py  bioc.py  hgnc.py  pubmed.py  pubtator.py
abstract2gene/dataset/: README.md  __init__.py  _bioc.py  _dataloader.py  _dataset.py  _dataset_generator.py  _pubnet.py  _utils.py  mutators.py
abstract2gene/model/: __init__.py  _models.py  _trainer.py  _utils.py
docker/: docker-compose-cpu.yml  docker-compose-gpu.yml
example/: _config.py  _logging.py  analyze_citation_network.py  collect_abstracts.py  compare_models.py  config.py  create.py  create_from_bioc.py  create_from_pubnet.py  differential_expression.py  embed_dataset.py  embedding_model_selection.py  finetune_bert.py  finetune_encoder.py  gene_distribution.py  inspect_embeddings.py  label_embedding_similarity.py  label_similarity.py  populate_db.py  predict_genes_in_behavioral_studies.py  reference_similarity.py  run_all.py  ss_features.py  test_abstract2gene.py  train_abstract2gene.py  upload_to_hub.py  usergen.py  validate_loo_gene_templates.py  validate_weighted_gene_templates.py
example/experiments/: differential_expression.py  plot_results.py  predict_genes_in_behavioral_studies.py  reference_similarity.py  test_abstract2gene.py
example/training/: _utils.py  embedding_model_selection.py  finetune_experiments.py  label_embedding_similarity.py  most_prevalent_label_embeddings.py  plot_training_curve.py  train_abstract2gene.py
example/webapp/: delete_db.py  populate_db.py
tests/: test_dataloader.py
webapp/: README.md  auth.py  config.py  database.py  genes.py  main.py  query.py  ui.py
webapp/static/: styles.css
webapp/templates/: a2g_results.html  search.html  search_pmid.html
