[tool.poetry]
name = "abstract2gene"
version = "0.1.0"
description = "Word distributions related to gene symbols"
license = "MIT"
repository = "https://github.com/net-synergy/abstract2gene"
authors = ["David Connell <davidconnell12@gmail.com>"]
packages = [{ include = "abstract2gene" }]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pandas = "^2.0"
nltk = "^3.7"
pubnet = {version = "^0.9", source = "testpypi", allow-prereleases = true, extras = ["pyarrow", "lm"]}
scikit-learn = "^1.5.2"
jax = "^0.4.35"
flax = "^0.10.2"
optax = "^0.2.4"
synstore = {version = "^0.1", source = "testpypi", allow-prereleases = true}
numpy = "^2.2.0"
tqdm = "^4.67.1"
transformers = "^4.47.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
black = "^24.0"
isort = "^5.12.0"
python-lsp-server = "^1.8.0"
pydocstyle = "^6.3.0"
pylsp-mypy = "^0.6.7"
python-lsp-ruff = "^2.0.0"
ipdb = "^0.13.13"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.black]
line-length = 79
preview = true

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["example"]

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 79
ignore = ["E203"]
select = ["A", "C", "D", "E", "F", "N", "RET", "SIM"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
