[project]
name = "abstract2gene"
version = "0.1.0"
description = "Classify abstracts with gene annotations"
license = "MIT"
repository = "https://github.com/net-synergy/abstract2gene"
authors = [{name = "David Connell", email = "davidconnell12@gmail.com"}]
packages = [{ include = "abstract2gene" }]
requires-python = ">=3.11"

dependencies = [
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "flax>=0.10.2",
    "huggingface-hub>=0.27.1",
    "igraph>=0.11.8",
    "jax[cuda12]>=0.5.0",
    "numpy>=2.0.0",
    "optax>=0.2.4",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "sentence-transformers[train]>=3.4.0",
    "speakeasy2>=0.1.5a0",
    "synstore>=0.1.3",
    "tf-keras>=2.18.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipdb>=0.13.13",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "pydocstyle>=6.3.0",
    "pylsp-mypy>=0.6.9",
    "pytest>=8.3.4",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
]

[tool.uv.sources]
speakeasy2 = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.black]
line-length = 79
preview = true

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["example"]

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 79
ignore = ["E203"]
select = ["A", "C", "D", "E", "F", "N", "RET", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
